--- a/package.json
+++ b/package.json
@@ -1,22 +1,8 @@
 {
-  "name": "material-kit-2-react",
+  "name": "rhodetails",
   "version": "2.0.0",
-  "private": true,
-  "author": "Creative Tim",
-  "license": "See license in https://www.creative-tim.com/license",
-  "description": "React version of Material Kit 2 by Creative Tim",
-  "homepage": "https://demos.creative-tim.com/material-kit-react/#/",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/ct-material-kit-react/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/ct-material-kit-react.git"
-  },
-  "engines": {
-    "node": "14 || 15 || 16",
-    "npm": ">=6"
-  },
+  "author": "Tobi Adeoye",
+  "description": "Rhodetails is a trans-media storytelling agency helping brands connect better with their target audience using the right communication tools across various social platforms.",
   "dependencies": {
     "@emotion/cache": "11.4.0",
     "@emotion/react": "11.5.0",
